--- a/misc/main_todo.org
+++ b/misc/main_todo.org
@@ -2,9 +2,10 @@
 #+title: NewSDLEngine
 * Next Milestone:
 ** Materials
+- [ ] Establish the concept of a material
 - [ ] Materials should store their texture uniform, camera uniforms, and other important information for easy access and updating
 - [ ] Materials should "cache" special uniforms like "camera uniforms" "texture array uniforms"
-- [ ] Default texture should always be in slot 0, make our texture array in the shader 0 indexed
+- [X] Default texture should always be in slot 0, make our texture array in the shader 0 indexed (we went with -1)
 ** Create a very early version of the new batch renderer
 - [ ] LAYERS. Use the depth buffer.
 - [ ] Clean up the code and allow for easy toggling of Debug macros
@@ -100,7 +101,6 @@
        This would allow the renderer to handle these issues when it actually is meant too, which may reduce the chance of bugs arising
 * Asset System TODOs
 - [ ] Multithreading!
-- [ ] Establish the concept of a material
 - [ ] Refine the system to use atomic reference counting for asset releasing.
 - [ ] Modify all asset deletion so that we only delete the asset at the END of the game frame]
 - [X] Textures and other assets should store a "generation" ID that tells us whether it has been updated
