- Basic program argument parser is created, expansion needed later on. - Fixed a bug with "c_string_find_first_char_from_right" where if the index was zero, we'd still return -1.

--- a/misc/main_todo.org
+++ b/misc/main_todo.org
@@ -23,6 +23,7 @@
 - [ ] Materials. Materials should store what shader / blending states are needed for a given set of objects.
       (shader, blend modes, depth state, textures, camera data, etc.)
 ** Metaprogram
+- [ ] Input flag parser
 ** Material file parser
 ** Create a very early version of the new batch renderer
 - [X] LAYERS. Use the depth buffer.
